# pyOptForce

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: algorithm.md  fvseof.md  in-depth.md
examples/: ecoli_succinate.py
src/pyoptforce/: __init__.py  bilevel.py  fva.py  model.py  must_sets.py  optforce.py  results.py  solvers.py
src/pyoptforce/extensions/: __init__.py  fseof.py
tests/: conftest.py  test_bilevel.py  test_edge_cases.py  test_fva.py  test_fvseof.py  test_gurobi.py  test_milp_vs_enumeration.py  test_must_sets.py  test_optforce_toy.py
